[project]
name = "vuer-collect-demo"
version = "0.1.0"
description = "Lightweight VR demo collection using Vuer + MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vuer>=0.0.50",
    "mujoco",
    "numpy",
    "zarr<3",
    "pyyaml",
    "pynput",
]

[project.scripts]
collect-demo = "collect_demo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
