[project]
name = "vuer-collect-demo"
version = "0.1.0"
description = "Lightweight VR demo collection using Vuer + MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vuer[all]==0.0.53",
    "aiohttp-cors",
    "params-proto==2.13.2",
    "mujoco",
    "numpy",
    "zarr<3",
    "pyyaml",
    "pynput",
]

[project.scripts]
collect-demo = "collect_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["collect_demo.py", "utils.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
